--- a/GendocsForms/Forms/frmEtiquetarEmpleadoFML.resx
+++ b/GendocsForms/Forms/frmEtiquetarEmpleadoFML.resx
@@ -118,65 +118,29 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="btnCartografia.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnAnadir.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAR5JREFUOE+N
-        0zFLgkEcx/FrSRBKHEQyaLPMsWiJXFraamsI30CD0OgkLqGI1OLQEhQVuFmu0iS9B5eguTdR399dB0+P
-        59UPPvI/5f+/h+dOQ2pYUhHIFrZd+SsFHGNFixmecQI/SE23uEIHDziAUsE7vjDVF/pxGed4wT2uUYJP
-        DhfYxQhreMUn7ACfDIqunIt2VrOGKdrkVEVywKKkm/s4w6EWfw3YxBh5uzLmEnVXut7YgFizEh2wgdBj
-        JxMd0MQbVpHe2Sc6YAKd9QfSO/tEBzRwhKxdhRMd8J/Y3idbhqMX6F9iKI/66EH3PvmnUVMLQ2iXLtbh
-        o6s8gE7GRvdeV1OD2lDjPnyquPmhE7lDGXPRoD1XBqOn2HGlYsw3yrI0NC78/xMAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAS1JREFUOE9j
+        gIGGhgamyOa9uaGhq5ihQgxhHXvtIpsOWEK5+EFEy768iiX3fsb3HO0B8d1KdnKnTTp9I2PK2bMgNlgR
+        PgByQXL/qf1AQ95Etu/3AInFdh7KqFn56Gt8z4llYEWEQFDLXvmCOVdvZ007fy2ubY8wSCyp9/ia2pWP
+        v0V3Hs0CKyIEYtqPRNesePgxsffERhA/tGE/T9bUC2cL5l6/H1VzUBWsiBCI7z62sH7V45/xvUdKQPzI
+        tn32FYvvvkideOpQWtoZVrAifMChYT9HxuTzJ0sW3Hwc2rrfACQW13WkFWRoXNfRSWBFhEBE536T0kW3
+        H6dPOnvcM3cbOyiQk/pO7a5aev99TOehAKgy3IAiAyj2AkWBSFE0UpSQKE7KVMlMpGdnBgYAe0b06UqH
+        lv0AAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="btnBajaTension.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnQuitar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAFlJREFUOE9j
-        GPRACohlIUzyQBAUkw1GDSDTgGwg5ocwUQwAieVDmPiBKhBvBmIhIIYZANK8EYi1gJgooAbEIENSgDgR
-        iEnSDAMaQHwDikFssoA6FA9awMAAAFa8DOvNqTRBAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAATlJREFUOE9j
+        wAfSp5y0TJ9yzg7KZQgNXcWcNuVsdkNDAxNUCDeIbjjBV7Pi4ZmqZQ/uhjbs5wGJ5c2+0dS59d1/kCFg
+        RfhA0fxbczu2vPubO/1iJoifMf2sU+vG15/KF9/eCXIJWBEukDH9QmzHlre/iuffXADix7WdFK5Z9fhi
+        49pnD1N7T6qBFeECcUAFjWuePa5b8fhy3JSTwiCxsgW3l3Rsfvsrc9qFGLAiXMChYT9L5dJ7u1o2vvqY
+        NvWCI0gsa8bFLKC//wJdMxWsCB/Im3Wlt2vbu//5c67Wgfip/ecNGtc9fwk09GRsyU5usCJcIGvqWY+2
+        Ta8/ly28vRkUTQkN+zmAMXC4af3ztxmTLphBleEGFBsAAhR5AQQoDkQQoCgaYYCihAQDFCVlEKA4M4EA
+        4ezMwAAALswFlFxGlG0AAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="btnMediaTension.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAERJREFUOE9j
-        GAVEgxwgVocwyQP8QLwRiLXAPDIBzBBtMA8LkAPiUAI4FYhvAjFW71BsACFAUThQHIj5QExRNA5fwMAA
-        AF0lDSmonWoFAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="btnAT.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAFRJREFUOE9j
-        GPRAHYrJAhpAfAOKQWySgBoQbwbiZCBOBOKNQKwFxEQBmGYhIA6CYn4gJtqQfCAGaQABmAEgABIDyZEE
-        kA0gC4waQAUDpKF40AIGBgAMcgzuMqBtHQAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="btnProyecto.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAjdJREFUWEft
-        l02ITlEch6+vkIWsLEgRilkQKYWSj7AaWdvYWLGwYS/FgkRKjRl7H6VshKRsKJNiQZqmlGLByEfIR/E8
-        9+3mzp1733fOOTdZeOpp7j3Ne/+/e77e82b/IvvwdqTncDomcQxf4olA7+AvvIxJIQxwr3MZxCF8i2OY
-        FCIlwFNcjQa5ijMwmNQAkhSijQASHaKtABIVIiXAc5xXcSt+wklPzJQALsNuHsaexAZYhNu6+AR9dk9i
-        A/TCZ/4P8FcDLMblncucVgLMxZO4N79rZiF+xZ/YZwO0EuAgupx88CwbGtiF/t8PbC3AAhzBD2iAA1jH
-        fPTr/AqWh2AQV3Yuu4avDVAUf4AOw340xB4s43brZx/jHBtKuAtuwmdo7wzjUpxAOYAPuYSvsShecBS/
-        4Ib8roMnIs8DS/K78exE54Uvshk9wNT19LgA27HYRtfZUGIKXkQLrkCPcvaKn6myAy1+Db/jaXSeeD2B
-        cgDHyrE7i9NsqGCX30DnxTes2+sNZE+dyu+ybDda2Hny0IYqTZOwiX4semmZDSX8JrS4b1wwFW/iG1xl
-        Q5XQADPRveFIfveHLfgZz6DDJRYfwsbiEhqgjo3oGWAAi+L+PY/vcK0NTaQGcFVEF5eUABb/iBfQ7pag
-        4hIbYDa+xxfovJBJjXmV2ACua/cBl+R1NFBwcTFAyE+z4+g262y/j+vREK8wuLiE/jj1LcUT8SO8i25K
-        vkRw8VjsgVG8he6Ga7CYhF3Ist/f+smZvKVfugAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="btnEditarDocs.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAjdJREFUWEft
-        l02ITlEch6+vkIWsLEgRilkQKYWSj7AaWdvYWLGwYS/FgkRKjRl7H6VshKRsKJNiQZqmlGLByEfIR/E8
-        9+3mzp1733fOOTdZeOpp7j3Ne/+/e77e82b/IvvwdqTncDomcQxf4olA7+AvvIxJIQxwr3MZxCF8i2OY
-        FCIlwFNcjQa5ijMwmNQAkhSijQASHaKtABIVIiXAc5xXcSt+wklPzJQALsNuHsaexAZYhNu6+AR9dk9i
-        A/TCZ/4P8FcDLMblncucVgLMxZO4N79rZiF+xZ/YZwO0EuAgupx88CwbGtiF/t8PbC3AAhzBD2iAA1jH
-        fPTr/AqWh2AQV3Yuu4avDVAUf4AOw340xB4s43brZx/jHBtKuAtuwmdo7wzjUpxAOYAPuYSvsShecBS/
-        4Ib8roMnIs8DS/K78exE54Uvshk9wNT19LgA27HYRtfZUGIKXkQLrkCPcvaKn6myAy1+Db/jaXSeeD2B
-        cgDHyrE7i9NsqGCX30DnxTes2+sNZE+dyu+ybDda2Hny0IYqTZOwiX4semmZDSX8JrS4b1wwFW/iG1xl
-        Q5XQADPRveFIfveHLfgZz6DDJRYfwsbiEhqgjo3oGWAAi+L+PY/vcK0NTaQGcFVEF5eUABb/iBfQ7pag
-        4hIbYDa+xxfovJBJjXmV2ACua/cBl+R1NFBwcTFAyE+z4+g262y/j+vREK8wuLiE/jj1LcUT8SO8i25K
-        vkRw8VjsgVG8he6Ga7CYhF3Ist/f+smZvKVfugAAAABJRU5ErkJggg==
-</value>
-  </data>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>25</value>
+  </metadata>
 </root>
