--- a/GendocsForms/Forms/FrmEtiquetarEmpleado.resx
+++ b/GendocsForms/Forms/FrmEtiquetarEmpleado.resx
@@ -118,65 +118,26 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="btnEtiquetas.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnAnadir.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAJxJREFUOE/N
-        zzEKwjAYhuGAu5ubZ9DZG3QRQfAmXsDNmwjSY7iou3gLF8FJ9H2LGRpTWif7wVOSNv9HGnqXIY54Nbhj
-        gWwcPuGGEtuMK3b4isNnOPyAh+cZB+xhVhi7SIe9apcCz1lSPdz4MVrj54LcQKqnBVM8Py+62MC4rgrM
-        BG7aFBjA1ApiZkiHmliwRC3+X7xqmwtG+GtCeANGaFy/CqniPQAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAS1JREFUOE9j
+        gIGGhgamyOa9uaGhq5ihQgxhHXvtIpsOWEK5+EFEy768iiX3fsb3HO0B8d1KdnKnTTp9I2PK2bMgNlgR
+        PgByQXL/qf1AQ95Etu/3AInFdh7KqFn56Gt8z4llYEWEQFDLXvmCOVdvZ007fy2ubY8wSCyp9/ia2pWP
+        v0V3Hs0CKyIEYtqPRNesePgxsffERhA/tGE/T9bUC2cL5l6/H1VzUBWsiBCI7z62sH7V45/xvUdKQPzI
+        tn32FYvvvkideOpQWtoZVrAifMChYT9HxuTzJ0sW3Hwc2rrfACQW13WkFWRoXNfRSWBFhEBE536T0kW3
+        H6dPOnvcM3cbOyiQk/pO7a5aev99TOehAKgy3IAiAyj2AkWBSFE0UpSQKE7KVMlMpGdnBgYAe0b06UqH
+        lv0AAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="btnUltimo.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnQuitar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7pAAAO6QEOM0IcAAAAB3RJ
-        TUUH5AIaDDohZL8g7AAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAFwSURBVEhL
-        ndY/KIVRHMbxF/mXSJGBMiAGlAXFgoHRYjRZTVaDUbEwCQOTGFhkYZDFwmBhMFAGSpHyN/n7fYZbt27v
-        +f3ueeqzPMP53d73nPPehMzhDwcoVZGSFtzhE8MqvCnAMjRkB0VISyce8Yo+Fd4UYhMasg4NTUsvXvCE
-        LhXeFGMPGrKoIpAhfOAerSq8KccRNGRaRSCj+MINGlV4U4VTaMiUikDG8YNL1KnwphYX+MWEikAmoR9z
-        hmoV3jTgGt8YUxHIDDTkGBUqvGlGZu+PqAhkHhqyjxIV3nTgAW/oV5ESbe1VaMg2QucpJz14hrX3tegW
-        NGQNofOUk0Fk9n6bipRkn6cFFd5kHy7vgFkVnsQ8oiUVnugl64LL5yVvQPebmZhtugs9JjMxB+0QZSqs
-        xFwVJ6hUYSXmsjtHjQorMdf1FepVWIn54NyiSYWVmE+m7qd2FVa02Aq0uPejr0PXrcKTfP+2vGNAhZ0k
-        +QfRRm0wWCsXnwAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAATlJREFUOE9j
+        wAfSp5y0TJ9yzg7KZQgNXcWcNuVsdkNDAxNUCDeIbjjBV7Pi4ZmqZQ/uhjbs5wGJ5c2+0dS59d1/kCFg
+        RfhA0fxbczu2vPubO/1iJoifMf2sU+vG15/KF9/eCXIJWBEukDH9QmzHlre/iuffXADix7WdFK5Z9fhi
+        49pnD1N7T6qBFeECcUAFjWuePa5b8fhy3JSTwiCxsgW3l3Rsfvsrc9qFGLAiXMChYT9L5dJ7u1o2vvqY
+        NvWCI0gsa8bFLKC//wJdMxWsCB/Im3Wlt2vbu//5c67Wgfip/ecNGtc9fwk09GRsyU5usCJcIGvqWY+2
+        Ta8/ly28vRkUTQkN+zmAMXC4af3ztxmTLphBleEGFBsAAhR5AQQoDkQQoCgaYYCihAQDFCVlEKA4M4EA
+        4ezMwAAALswFlFxGlG0AAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="btnSiguiente.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7pAAAO6QEOM0IcAAAAB3RJ
-        TUUH5AIaDQE4PaQNIwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAADHSURBVEhL
-        tZUxDgFRFEVHNAoF0eiETqlQ0Sn0FqCwAUtQqmzACjRsgJYS0VGhEHbhvDuZViFzT3KSOVPMJP/PvJ/8
-        4Iz99NLDAD/YVZkY4hs7KhMjfGFbZWKMT2ypTEzwjg2ViSnesK4yMcML1lQm5njCqsrEAg9YVhko4BJ3
-        WIobDoq4wo3KQPaCtSpnsiXaomWJYpP3aNnk+EyPWFHljPVHi1FxRcuosA67GNcPbKpyxnrgWI/MOPTj
-        4bZDP8ZxL738lyT5Ai/dIF7E2qiVAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="btnAnterior.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7pAAAO6QEOM0IcAAAAB3RJ
-        TUUH5AIaDQE4PaQNIwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAADLSURBVEhL
-        tdUxDgFREIDhJxqFgmh0QqdUqOgUegdQuIAjKFUu4AQaLmBbSkRnq6UQbuGf2UyjnvmTL9lRkOyuecmh
-        Ea7lpX9DfDDRybkB5MunOjnXxxsznZzr4om5Ts51UGChk3NtPLDUybkW7ljp5FwDF6x1cq6OEzY6OVfD
-        EVtU5APv9tihqlNAB4T+gNyiDGG3SJKHfEbIQ7aakHUc8ppaoX80S1ZFjpBVYYUuO6uHF0LWtRV64Fih
-        R6Ylh/4XIYe+NcatvPwvpR/gHyBeIl5UxwAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="btnPrimero.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7pAAAO6QEOM0IcAAAAB3RJ
-        TUUH5AIaDDohZL8g7AAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAFwSURBVEhL
-        tdY9KIVRHMfxi7x1I0WGqwyIAWVBXQsGRovRZL2T1WBU18IkDExiYNFdGGSxMFgYDNQd3FKkvCav399w
-        Buk5L/U8v/osv7r/U89zznluKiDDeEUJHSoiUo0D/CCvwif9eMQ9elVEpAK70PBVlMGZbtzhCYMqIqJh
-        G9DwLZTDmTbc4A2jKixZgoYXUKnClQyu8IEJFZbMQsOPUKvClUac4wtTKiyZgYafol6FK3U4gX6UU2HJ
-        NL5xgSYVrtTgEBo+p8KSSXziGi0qXNGL2YOGL6iwZBzv0JloV+GKttQmNHwNtv07hBfoTPSo8MkyNHwb
-        OixR6cMDdOgGVPhkHhru2r9duIXPmfiTRYQuMKLCN3re60jsESkauoOQl6z7yfslK1XYhxaJfZuapHEM
-        LRL7QTNpwBm0SOxXhUkzLpHIZWfSiiISua5NOuF7uII/OCZm7yfyyTTJ4hkhH/0V2M7Tv4zB7H3Pvy2p
-        /C8W1m0w9H00IgAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
 </root>
