--- a/GendocsForms/Forms/FrmPedidoEdit.resx
+++ b/GendocsForms/Forms/FrmPedidoEdit.resx
@@ -204,4 +204,7 @@
         EV7j1GrJa0R/P6RYPN+dUekpxxqLpYGvQ849AagYODSF7xZ9AAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>25</value>
+  </metadata>
 </root>
